src/static/css/slim.one.css
/* ... */
.box-footer {
  text-align: center;
  font-size: 0.8rem;
}

.btn-outline-dark,
.btn-outline-success {
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
}

.btn-no-focus:focus {
  box-shadow: none !important;
}

.btn-no-focus:hover {
  background: none !important;
}

.btn-no-focus.btn-outline-success {
  color: #23BF08;
}

.modal-keys {
  min-width: 600px;
}

.btn-2fa {
  padding: 0 0.6rem;
  transition: background-color .3s, box-shadow .3s, color .3s;
}

.btn-2fa:hover {
  transition: background-color .3s, box-shadow .3s, color .3s;
}

.tx-pending {
  font-weight: 600;
  color: rgb(211, 37, 53);
}

.qr-reader {
  width: 50%;
  margin-left: 25%;
}

/******************** MARGIN FOR NAV ICONS *********************/

.nav-link span {
	margin-left: 10px;
}

/******************** STRETCH ALL CHILDREN 100% VERTICAL *********************/

.flex-stretch-vertical {
	flex-direction: row;
	height: 100%;
}

.flex-stretch-vertical .card {
	height: 100%;
}

/******************** dialogs widths should be larger *********************/

#dlgReceiveCoins, #dlgSendCoins {
	width: 80%;
	max-width: 1100px;
	border: 1px solid #343a40;
}

#dlgExportKeys {
  width: 80%;
  max-width: 900px;
  border: 1px solid #343a40;
}

#dlgAddContact {
  width: 80%;
  max-width: 900px;
  border: 1px solid #343a40;
}

/******************** the send dialog buttons *********************/

.tx-total-btns {
	display: flex;
	flex-direction: column;
}

.btn-send {
	margin-bottom: 10px;
}

/******************** wallet address in receive *********************/

#dlgReceiveCoins .receive-address {
	padding: 5px 8px 5px 20px !important;
}

#dlgReceiveCoins .receive-address input {
	background-color: #212529 !important;
}

/******************** export keys background and padding *********************/

#dlgExportKeys .wallet-address {
	padding: 5px 8px 5px 20px !important;
}

#dlgExportKeys .wallet-address input {
	background-color: #212529 !important;
}

/******************** mobile related dialog fixes *********************/

@media (max-width: 900px) {
	.modal-dialog {
		width: 90% !important;
		margin: 0px !important;
	}
}

@media (max-width: 600px) {
	.modal-dialog {
		width: 100% !important;
		margin: 0px !important;
	}
}

/******************** mobile related dialog fixes *********************/

#dlgTxDetails {
	border: 1px solid #343a40;
}

#dlgTxDetails .media {
	overflow: hidden;
}

/******************** settings buttons *********************/

.row-text-button {
	display: flex;
	align-items: center;
  justify-content: space-between;
}

/******************** 2FA dialog *********************/

.twofa-dialog {
  margin-top: 20px;
}

/******************** file select *********************/

.custom-file-input {
	opacity: 1 !important;
}

/******************** mobile forms  *********************/

@media (max-width: 700px) {
	.form-layout .row {
		display: block !important;
	}

	.form-layout .row .col-5,
	.form-layout .row .col-7 {
		max-width: 100% !important;
		display: block !important;
		width: 100% !important;
	}
}

/******************** mobile send form  *********************/

@media (max-width: 600px) {
	.sendSummary h2 {
		font-size: 1.4rem;
	}
}

@media (max-width: 400px) {
	.sendSection {
		display: block !important;
	}

	.sendSummary {
		padding: 20px;
	}
}

/******************** sticky footer at bottom  *********************/

.slim-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

html {
  position: relative;
  min-height: 100%;
  overflow-x:hidden;
  width:100vw;
}

body {
  height: 100%;
}

#root {
  padding-bottom: 75px;
}

